# FO4_MAT_MOD_SHAD

./: .gitignore  Alien_Body_edited.BGSM  FO4_NIF_Pipeline_Protocol_v0_1_0.json  FO4_material_analysis_report.md  Material Editor.csproj  POTENTIAL_ASSESTS__________________________________________________________.txt  Program.fixed.v6.cs  Program.fixed.v7.cs  Program.fixed.v8.cs  README.md  STEAL ASSESTS__________________________________________________________.txt  SYNTAX_AND_TEST_INFO_SANCT.txt  dlc_materials_scan.json  rootmaterialpath_top50.csv  schema.json
CommonLibF4/CommonLibF4/: vcpkg.json
DOCUMENTS/: ChatGPT-FO4 Material System Analysis2.md  ChatGPT-FO4 Shader System Overview.md
FO4ShaderDB/sessions/: test_session.jsonl
FO4ShaderDB/structural/: ps_dummy_001.json  ps_dummy_002.json  ps_dummy_003.json
GFXBooster/: CMakeLists.txt  GFXBoosterCL.ini  Global.cpp  Global.h  PCH.h  Plugin.cpp  imgui_impl_dx11.h  imgui_impl_win32.h  main.cpp  vcpkg.json
GFXBooster-main/: Global.cpp  Global.h  Plugin.cpp  Plugin.h  main.cpp
GFXBooster/REX/W32/: DXGI.h  DXGI_6.h
GFXBoosterPlugin/GFXBooster/: GFXBooster.sln
MaterialCli/: MaterialCli.csproj
NifCli/: Cedar01_SSS.nif  FO4_Shader_Permutation_Project_Full_Reconstruction_v1_0.md  MAJORDISCOVERGITS.txt  NifCli.csproj  Program.cs  grass_sss_scan.csv  permutation_summary.csv  refraction_hits.csv  spf1_group_topbits.csv
NifCli/analysis_out/: mesh_dump.jsonl
RenderArchitectureDB/: FO4.RenderArchitectureDB.sln  README.md  permutation_index.csv  permutation_index_LOOSE_decoded_assetclass.csv  permutation_index_STRICT_decoded_assetclass.csv  permutation_index_decoded_by_assetclass.csv
analysis_out/: FO4_material_analysis_bundle.json  per_dlc_new_fields.csv
dlc_scans/: Automaton.json  FarHarbor.json  NukaWorld.json  WorkShop1.json  WorkShop2.json  WorkShop3.json
testpack/: refract_on_005.bgsm  refract_on_005.bgsm.txt  refract_on_020.bgsm  refract_on_020.bgsm.txt  trans_off.bgsm.txt  trans_on.bgsm
(+37 files in other folders)
